--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
+    "@angular/core": "16.1.2",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
@@ -30,7 +30,6 @@
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
     "@ionic/lab": "^3.2.15",
-    "ionic": "^4.1.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
