--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@awesome-cordova-plugins/vibration": "^6.3.0",
     "@capacitor/android": "5.0.5",
     "@capacitor/app": "5.0.3",
     "@capacitor/core": "5.0.5",
@@ -30,6 +31,7 @@
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
     "@ionic/lab": "^3.2.15",
+    "cordova-plugin-vibration": "^3.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -50,8 +52,8 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.59.11",
-    "@typescript-eslint/parser": "5.59.11",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsdoc": "30.7.13",
