--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@awesome-cordova-plugins/core": "6.3.0",
     "@awesome-cordova-plugins/vibration": "^6.3.0",
     "@capacitor/android": "5.0.5",
     "@capacitor/app": "5.0.3",
@@ -31,6 +32,7 @@
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
     "@ionic/lab": "^3.2.15",
+    "ionic": "^5.4.16",
     "cordova-plugin-vibration": "^3.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
